src/objects/Stripe_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Disable_Callout_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, callouts will not be made back to Stripe to retrieve events</description>
        <inlineHelpText>When checked, callouts will not be made back to Stripe to retrieve events</inlineHelpText>
        <label>Disable Callout Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Live_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Live_Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stripe_Secret_Live_Key__c</fullName>
        <label>Stripe_Secret_Live_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Secret_Test_Key__c</fullName>
        <label>Stripe_Secret_Test_Key__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stripe Settings</label>
</CustomObject>